# color_console_py

./: README.md  color_console.py  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: demonstrate.yml  python-package.yml  python-publish-test.yml  python-publish.yml
color_console/: __init__.py
src/color_console/: __init__.py
tests/: demonstration.py
tests/unit/: test.py
