[metadata]
name = color_console_py-GoldenMoose
version = 0.0.1
author = Fabian Mooslechner
author_email = fabian.mooslechner@gmail.com
description = Allows colored output to the console
long_description = file: README.md
long_description_content_type = text/markdown
url = https://dev.azure.com/GoldenMoose/Color%20console
project_urls =
    Bug Tracker = https://dev.azure.com/GoldenMoose/Color%20console/_workitems/create/Issue?templateId=4a5ae39c-f598-4096-99a4-8875f9d98f30&ownerId=cb0b887f-0f8b-4857-9e00-5d20aab752dc
    Feature Request = https://dev.azure.com/GoldenMoose/Color%20console/_workitems/create/Issue?templateId=493bef80-1c6b-43d7-9baf-5c417437e4fd&ownerId=cb0b887f-0f8b-4857-9e00-5d20aab752dc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src